# StellarAlia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CompileShaders.cmake
config/: app.ini
examples/sandbox/: CMakeLists.txt  main.cpp
shaders/: debug_triangle.frag  debug_triangle.vert  deferred_geometry.frag  deferred_geometry.vert  deferred_lighting.frag  deferred_lighting.vert
shaders/include/: common.glsl  pbr.glsl
src/: CMakeLists.txt  main.cpp  runtime_placeholder.cpp
src/core/logs/: Log.cpp  Log.hpp
src/function/graphics/: GraphicsContext.cpp  GraphicsContext.hpp  RenderSystem.cpp  RenderSystem.hpp  WindowSystem.cpp  WindowSystem.hpp
src/function/graphics/vulkan/: VMA.cpp  VulkanGraphicsContext.cpp  VulkanGraphicsContext.hpp
src/function/graphics/window/: Window.cpp  Window.hpp
src/function/graphics/window/glfw/: GLFWWindow.cpp  GLFWWindow.hpp
src/function/graphics/window/sdl2/: SDL2Window.cpp  SDL2Window.hpp
src/platform/: PathHandler.cpp  PathHandler.hpp
src/resource/config_manager/: ConfigManager.cpp  ConfigManager.hpp
